feat: add endpoint to retrieve user ticket booking quota
